🔧 fix: changed button color due to conflict with dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -154,7 +154,7 @@ h6 {
     font-weight: bold;
     text-transform: none;
     background: var(--color-primary);
-    color: var(--color-secondary);
+    color: white
 }
 
 .btn.primary:hover {
